vpcpeering.json
{
	"AWSTemplateFormatVersion": "2010-09-09",

	"Resources": {
		"VPC": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "10.0.0.0/16",
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"InstanceTenancy": "default"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "766ad523-71f1-4755-9e84-4bf38ef05a6e"
				}
			}
		},
		"publicsubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "ap-south-1a",
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": "10.0.1.0/24",
				"MapPublicIpOnLaunch": true
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "351f266e-3350-4b15-93fa-8d649aa75f6f"
				}
			}
		},
		"privatesubnet": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "ap-south-1b",
				"VpcId": {
					"Ref": "VPC"
				},
				"CidrBlock": "10.0.2.0/24",
				"MapPublicIpOnLaunch": true
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "33570c8a-de4b-4b5b-afbf-cabe752987d0"
				}
			}
		},
		"publicroutetable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "7250cf26-842e-4c9f-afad-46410873f845"
				}
			}
		},
		"PeeringRoute1" : {
            "Type" : "AWS::EC2::Route",
            "Properties" : {
				"DestinationCidrBlock": "10.20.0.0/16",
                "RouteTableId" : { "Ref" : "publicroutetable" },
                "VpcPeeringConnectionId" : { "Ref" : "myVPCPeeringConnection" }
            }
        },
		"privateroutetable": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "7250cf26-842e-4c9f-afad-46410873f845"
				}
			}
		},
		"PeeringRoute2" : {
            "Type" : "AWS::EC2::Route",
            "Properties" : {
				"DestinationCidrBlock": "10.20.0.0/16",
                "RouteTableId" : { "Ref" : "privateroutetable" },
                "VpcPeeringConnectionId" : { "Ref" : "myVPCPeeringConnection" }
            }
        },
		"mySubnetRouteTableAssociation1": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "publicsubnet"
				},
				"RouteTableId": {
					"Ref": "publicroutetable"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "f2b43b95-4cea-45a5-9a04-b1390fa7be3a"
				}
			}
		},
		"mySubnetRouteTableAssociation2": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "privatesubnet"
				},
				"RouteTableId": {
					"Ref": "privateroutetable"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "ca3cc4b9-fed4-42f8-9946-7c257bf49031"
				}
			}
		},
		"myigw": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "861f8b05-86eb-4328-997e-ce1e1df74098"
				}
			}
		},
		"vpcIGWattachment": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC"
				},
				"InternetGatewayId": {
					"Ref": "myigw"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "14ca5ed1-5500-4211-a3d4-b919ac5126e3"
				}
			}
		},
		"publicroute": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "publicroutetable"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "myigw"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "fca5020b-dc3e-477d-a61e-c4a07a0149ac"
				}
			},
			"DependsOn": [
				"vpcIGWattachment"
			]
		},

		"VPC1": {
			"Type": "AWS::EC2::VPC",
			"Properties": {
				"CidrBlock": "10.20.0.0/16",
				"EnableDnsSupport": true,
				"EnableDnsHostnames": true,
				"InstanceTenancy": "default"
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "766ad523-71f1-4755-9e84-4bf38ef05a6e"
				}
			}
		},
		"publicsubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "ap-south-1a",
				"VpcId": {
					"Ref": "VPC1"
				},
				"CidrBlock": "10.20.1.0/24",
				"MapPublicIpOnLaunch": true
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "351f266e-3350-4b15-93fa-8d649aa75f6f"
				}
			}
		},
		"privatesubnet1": {
			"Type": "AWS::EC2::Subnet",
			"Properties": {
				"AvailabilityZone": "ap-south-1b",
				"VpcId": {
					"Ref": "VPC1"
				},
				"CidrBlock": "10.20.2.0/24",
				"MapPublicIpOnLaunch": true
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "33570c8a-de4b-4b5b-afbf-cabe752987d0"
				}
			}
		},
		"publicroutetable1": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC1"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "7250cf26-842e-4c9f-afad-46410873f845"
				}
			}
		},
		"PeeringRoute3" : {
            "Type" : "AWS::EC2::Route",
            "Properties" : {
				"DestinationCidrBlock": "10.0.0.0/16",
                "RouteTableId" : { "Ref" : "publicroutetable1" },
                "VpcPeeringConnectionId" : { "Ref" : "myVPCPeeringConnection" }
            }
        },
		"privateroutetable1": {
			"Type": "AWS::EC2::RouteTable",
			"Properties": {
				"VpcId": {
					"Ref": "VPC1"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "7250cf26-842e-4c9f-afad-46410873f845"
				}
			}
		},
	    "PeeringRoute4" : {
            "Type" : "AWS::EC2::Route",
            "Properties" : {
				"DestinationCidrBlock": "10.0.0.0/16",
                "RouteTableId" : { "Ref" : "privateroutetable1" },
                "VpcPeeringConnectionId" : { "Ref" : "myVPCPeeringConnection" }
            }
        },
		"mySubnetRouteTableAssociation3": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "publicsubnet1"
				},
				"RouteTableId": {
					"Ref": "publicroutetable1"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "f2b43b95-4cea-45a5-9a04-b1390fa7be3a"
				}
			}
		},
		"mySubnetRouteTableAssociation4": {
			"Type": "AWS::EC2::SubnetRouteTableAssociation",
			"Properties": {
				"SubnetId": {
					"Ref": "privatesubnet1"
				},
				"RouteTableId": {
					"Ref": "privateroutetable1"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "ca3cc4b9-fed4-42f8-9946-7c257bf49031"
				}
			}
		},
		"myigw1": {
			"Type": "AWS::EC2::InternetGateway",
			"Properties": {},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "861f8b05-86eb-4328-997e-ce1e1df74098"
				}
			}
		},
		"vpcIGWattachment1": {
			"Type": "AWS::EC2::VPCGatewayAttachment",
			"Properties": {
				"VpcId": {
					"Ref": "VPC1"
				},
				"InternetGatewayId": {
					"Ref": "myigw1"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "14ca5ed1-5500-4211-a3d4-b919ac5126e3"
				}
			}
		},
		"publicroute1": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "publicroutetable1"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"GatewayId": {
					"Ref": "myigw1"
				}
			},
			"Metadata": {
				"AWS::CloudFormation::Designer": {
					"id": "fca5020b-dc3e-477d-a61e-c4a07a0149ac"
				}
			},
			"DependsOn": [
				"vpcIGWattachment1"
			]
		},
		"NAT": {
			"DependsOn": "vpcIGWattachment",
			"Type": "AWS::EC2::NatGateway",
			"Properties": {
				"AllocationId": {
					"Fn::GetAtt": ["EIP", "AllocationId"]
				},
				"SubnetId": {
					"Ref": "privatesubnet1"
				},
				"Tags": [{
					"Key": "foo",
					"Value": "bar"
				}]
			}
		},
		"EIP": {
			"Type": "AWS::EC2::EIP",
			"Properties": {
				"Domain": "vpc"
			}
		},
		"privateRoute1": {
			"Type": "AWS::EC2::Route",
			"Properties": {
				"RouteTableId": {
					"Ref": "privateroutetable1"
				},
				"DestinationCidrBlock": "0.0.0.0/0",
				"NatGatewayId": {
					"Ref": "NAT"
				}
			}
		},
		"myVPCPeeringConnection": {
		"Type": "AWS::EC2::VPCPeeringConnection",
		"Properties": {
			"VpcId": {
				"Ref": "VPC"
			},
			"PeerVpcId": {
				"Ref": "VPC1"
			}
		}
	}
	}
}
